update makefile to comment out CFLAGS and add .gitignore for object files and executable; add detailed program argument documentation in notas_subject

--- a/philo/makefile
+++ b/philo/makefile
@@ -2,7 +2,7 @@
 NAME = philo
 
 CC = cc
-CFLAGS =  -I includes -Wall -Wextra -Werror
+# CFLAGS =  -I includes -Wall -Wextra -Werror
 
 SRC_DIR = src
 
