fix: include init.c in SRC_MAIN for proper compilation

--- a/philo/makefile
+++ b/philo/makefile
@@ -6,7 +6,7 @@ CC = cc
 
 SRC_DIR = src
 
-SRC_MAIN	=	main.c
+SRC_MAIN	=	main.c init.c
 # SRC_MAIN	=	main_thread.c
 SRC_UTILS	=	$(addprefix utils/, utils.c)
 
