Add testing and visualization scripts for 42 Philosophers project
- Created requirements.txt for Selenium dependency.
- Implemented test.sh script to automate testing of philosopher simulation.
- Developed visualizer.py to display test results using a web interface.
- Added visualizer.sh to handle Python environment setup and execution.
- Introduced start_routine.c with philosopher routines and monitoring logic.

--- a/philo/makefile
+++ b/philo/makefile
@@ -8,7 +8,7 @@ CFLAGS = -Wall -Wextra -Werror -pthread -fsanitize=thread -I includes
 
 SRC_DIR = src
 
-SRC_MAIN	=	main.c init.c
+SRC_MAIN	=	main.c init.c start_routine.c
 # SRC_MAIN	=	main_thread.c
 SRC_UTILS	=	$(addprefix utils/, utils.c)
 
