--- a/philo/makefile
+++ b/philo/makefile
@@ -2,15 +2,15 @@
 NAME = philo
 
 CC = cc
-# CFLAGS = -Wall -Wextra -Werror -pthread -fsanitize=thread -I includes
-CFLAGS = -Wall -Wextra -Werror -pthread  -I includes
+CFLAGS = -Wall -Wextra -Werror -pthread -fsanitize=thread -I includes
+# CFLAGS = -Wall -Wextra -Werror -pthread  -I includes
 
 
 SRC_DIR = src
 
-SRC_MAIN	=	main.c init.c start_routine.c
+SRC_MAIN	=	main.c init.c start_routine.c utils.c
 # SRC_MAIN	=	main_thread.c
-SRC_UTILS	=	$(addprefix utils/, utils.c)
+# SRC_UTILS	=	$(addprefix utils/, utils.c)
 
 SRCS = $(addprefix $(SRC_DIR)/, $(SRC_MAIN) $(SRC_UTILS))
 
@@ -41,6 +41,6 @@ teste: re
 	@./philo 5 800 200 200
 
 teste1: re
-	@./philo 5 1000 200 200 3
+	@./philo 5 800 200 200 3
 
 .PHONY: all clean fclean re
